# hallbayes

./: .gitignore  README.md  pyproject.toml  setup.py
drkg/: README.md  drkg_hallbayes.py  drkg_link_and_collect.py
hallbayes/: __init__.py  backend_entry.py  build_offline_backend.bat  build_offline_backend.sh  hallucination_toolkit.py  quick_eval.py  stable_decode.py
hallbayes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: hallucination_toolkit.py
